<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#888A91"
    tools:context=".Tag1">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="238dp"
        android:layout_height="56dp"
        android:textColor="@android:color/white"
        android:text="@string/what_is_html"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="379dp"
        android:layout_height="70dp"
        android:text="@string/html_stands_for_hyper_text_markup_language"
        android:textSize="20sp"
        android:layout_below="@id/textView1"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        app:drawableLeftCompat="@drawable/ic_baseline_circle_24" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="387dp"
        android:layout_height="65dp"
        android:text="@string/html_is_the_standard_markup_language_for_creating_web_pages"
        android:textSize="20sp"
        android:layout_below="@id/textView2"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        app:drawableLeftCompat="@drawable/ic_baseline_circle_24" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="396dp"
        android:layout_height="53dp"
        android:text="@string/html_describes_the_structure_of_a_web_page"
        android:textSize="20sp"
        android:layout_below="@id/textView3"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        app:drawableLeftCompat="@drawable/ic_baseline_circle_24" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="396dp"
        android:layout_height="53dp"
        android:text="@string/html_consists_of_a_series_of_elements"
        android:textSize="20sp"
        android:layout_below="@id/textView4"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        app:drawableLeftCompat="@drawable/ic_baseline_circle_24" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="396dp"
        android:layout_height="53dp"
        android:text="@string/html_elements_tell_the_browser_how_to_display_the_content"
        android:textSize="20sp"
        android:layout_below="@id/textView5"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        app:drawableLeftCompat="@drawable/ic_baseline_circle_24" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/black"
        android:contentDescription="@string/About_us"
        android:text="@string/visual"
        tools:ignore="SpeakableTextPresentCheck" />
</RelativeLayout>
